--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ django = "^4.2.2"
 psycopg2-binary = "^2.9.6"
 pillow = "^9.5.0"
 ipython = "^8.14.0"
+django-autoslug = "^1.9.9"
 
 
 [build-system]
