--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,8 @@ psycopg2-binary = "^2.9.6"
 pillow = "^9.5.0"
 ipython = "^8.14.0"
 django-autoslug = "^1.9.9"
+unidecode = "^1.3.6"
+slugify = "^0.0.1"
 
 
 [build-system]
